# ClipDrop

./: .gitignore  LICENSE  README.md  claude.md  codex.md  current.md  prd.md  skills-lock.json
.agents/skills/: skills.md
.github/workflows/: ci.yml  desktop-release.yml  macos-desktop.yml
Landing Page/: home.css  home.html  home.js
app/src/: index.html  settings.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: README.md  ffprobe-linux
app/src-tauri/src/: config.rs  downloader.rs  error.rs  formats.rs  main.rs  models.rs  queue.rs  server.rs
app/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  PRD.md  SKILLS_IMPLEMENTATION.md  platform-audit.md
extension/: api.js  background.js  constants.js  content.css  content.js  ferry-button-animation.json  manifest.json  popup.css  popup.html  popup.js  runtime.js  settings.html  settings.js
extension/assets/: UX design.html
extension/background/: background.js
extension/popup/: popup.css  popup.html  popup.js
extension/settings/: settings.css  settings.html  settings.js
extension/shared/: constants.js
scripts/: bootstrap-build.sh  bootstrap-linux.sh  bootstrap-macos.sh  bootstrap-windows.ps1  build-all.sh  dev-check.sh  hydrate-sidecars-linux.sh  hydrate-sidecars-windows.ps1  smoke-api.mjs
